# libshmipc

./: '  .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  Makefile  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  WORKSPACE  consumer  producer
.github/scripts/: bump-version.sh  package-core.sh  package-jni.sh  (+2 more)
build-mix/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  ShmipcConfig.cmake  cmake_install.cmake
cmake/: ShmipcConfig.cmake.in
core/: BUILD.bazel
core/src/: ipc_buffer.c  ipc_channel.c  ipc_futex.c  ipc_futex.h  ipc_init.c  ipc_mmap.c  ipc_utils.c  ipc_utils.h
core/tests/: BUILD.bazel  concurrency_manager.hpp  concurrent_test_utils.h  ipc_buffer_basic_test.cpp  ipc_buffer_concurrency_test.cpp  test_utils.h  unsafe_collector.hpp
core/tests/suites/: ipc_buffer_basic_test.cpp  ipc_buffer_concurrency_test.cpp  ipc_channel_basic_test.cpp  ipc_channel_concurrency_test.cpp  ipc_mmap_test.cpp
core/tools/: cc_tests.bzl
docs/: CI_TESTING.md  SANITIZERS.md
include/: BUILD.bazel
java/: BUILD.bazel  README.md
java/native/: BUILD.bazel
java/native/include/shmipc/jni/: lib_shm_ipc_jni_IpcChannel.h
java/native/native/src/: lib_shm_ipc_jni_IpcChannel.c
java/native/src/: lib_shm_ipc_jni_IpcChannel.c
java/src/main/java/jextract/: IpcChannelConnectError.java  IpcChannelConnectResult.java  IpcChannelConnectResultError.java  IpcChannelCreateError.java  IpcChannelCreateResult.java  IpcChannelCreateResultError.java  IpcChannelDestroyError.java  IpcChannelDestroyResult.java  IpcChannelDestroyResultError.java  IpcChannelPeekError.java  IpcChannelPeekResult.java  IpcChannelPeekResultError.java  IpcChannelReadError.java  IpcChannelReadResult.java  IpcChannelReadResultError.java  IpcChannelSkipError.java  IpcChannelSkipForceError.java  IpcChannelSkipForceResult.java  IpcChannelSkipForceResultError.java  IpcChannelSkipResult.java  IpcChannelSkipResultError.java  IpcChannelTryReadError.java  IpcChannelTryReadResult.java  IpcChannelTryReadResultError.java  IpcChannelWriteError.java  IpcChannelWriteResult.java  IpcChannelWriteResultError.java  IpcEntry.java  __darwin_mbstate_t.java  __darwin_pthread_attr_t.java  __darwin_pthread_cond_t.java  __darwin_pthread_condattr_t.java  __darwin_pthread_handler_rec.java  __darwin_pthread_mutex_t.java  __darwin_pthread_mutexattr_t.java  __darwin_pthread_once_t.java  __darwin_pthread_rwlock_t.java  __darwin_pthread_rwlockattr_t.java  __mbstate_t.java  _opaque_pthread_attr_t.java  (+14 more)
java/src/main/java/lib/shm/ipc/: IpcStatus.java  LibLoader.java
java/src/main/java/lib/shm/ipc/channel/: IpcChannel.java
java/src/main/java/lib/shm/ipc/conf/: IpcChannelConfiguration.java
java/src/main/java/lib/shm/ipc/exeption/: IpcException.java
java/src/main/java/lib/shm/ipc/jextract/channel/: IpcChannelConnectError.java  IpcChannelConnectResult.java  IpcChannelConnectResultError.java  IpcChannelCreateError.java  IpcChannelCreateResult.java  IpcChannelCreateResultError.java  IpcChannelDestroyError.java  IpcChannelDestroyResult.java  IpcChannelDestroyResultError.java  IpcChannelOpenError.java  IpcChannelOpenResult.java  IpcChannelOpenResultError.java  IpcChannelPeekError.java  IpcChannelPeekResult.java  IpcChannelPeekResultError.java  IpcChannelReadError.java  IpcChannelReadResult.java  IpcChannelReadResultError.java  IpcChannelSkipError.java  IpcChannelSkipForceError.java  IpcChannelSkipForceResult.java  IpcChannelSkipForceResultError.java  IpcChannelSkipResult.java  IpcChannelSkipResultError.java  IpcChannelTryReadError.java  IpcChannelTryReadResult.java  IpcChannelTryReadResultError.java  IpcChannelWriteError.java  IpcChannelWriteResult.java  IpcChannelWriteResultError.java  IpcEntry.java  __darwin_mbstate_t.java  __darwin_pthread_attr_t.java  __darwin_pthread_cond_t.java  __darwin_pthread_condattr_t.java  __darwin_pthread_handler_rec.java  __darwin_pthread_mutex_t.java  __darwin_pthread_mutexattr_t.java  __darwin_pthread_once_t.java  __darwin_pthread_rwlock_t.java  (+15 more)
java/src/main/java/lib/shm/ipc/jni/: IpcChannel.java
java/src/main/java/lib/shm/ipc/result/: IpcBaseResult.java  IpcBooleanResult.java  IpcBytesResult.java  IpcChannelResult.java  IpcError.java  IpcLongResult.java  IpcResultWrapper.java
java/src/test/java/lib/shm/ipc/: LibLoadTest.java
java/src/test/java/lib/shm/ipc/channel/: IpcChannelTest.java
java/src/test/java/lib/shm/ipc/jextract/: ChannelBaseTest.java
java/src/test/java/lib/shm/ipc/jni/: IpcChannelTest.java
java/tools/: gen_jni_headers.sh  java_tests.bzl  jni_headers.bzl
scripts/: build.sh  init.sh  release_local.sh  run_all_tests.sh  run_performance_tests.sh  run_release_tests.sh  run_tests.sh  setup_local_ci.sh  test_ci_locally.sh  test_with_asan.sh  test_with_tsan.sh  test_with_ubsan.sh  use_jextract.sh
src/: CMakeLists.txt  consumer.c  consumer_with_mode.c  ipc_buffer.c  ipc_buffer.h  ipc_channel.c  ipc_mmap.c  ipc_mmap.h  ipc_status.h  ipc_utils.c  ipc_utils.h  producer.c  test_shm_file_name.h
src/lock/: lock.c  lock.h  lock_erno.c  lock_erno.h  read_write_lock.c  read_write_lock.h
tests/: BUILD.bazel  CMakeLists.txt  README.md  README_concurrent_test_utils.md  README_ipc_buffer_basic_test.md  README_ipc_buffer_concurrency_test.md  README_ipc_channel_basic_test.md  README_ipc_channel_comprehensive_test.md  README_ipc_channel_concurrent_test.md  README_ipc_channel_performance_test.md  README_ipc_mmap_test.md  README_test_utils.md  concurrency_manager.hpp  concurrent_set.hpp  concurrent_test_utils.h  ipc_buffer_basic_test.c  ipc_buffer_basic_test.cpp  ipc_buffer_concurrency_test.cpp  ipc_buffer_stress_test.cpp  ipc_channel_basic_test.c  ipc_channel_basic_test.cpp  ipc_channel_comprehensive_test.cpp  ipc_channel_concurrency_test.cpp  ipc_channel_interprocess_stress_test.cpp  ipc_channel_interprocess_test.cpp  ipc_channel_performance_test.cpp  ipc_channel_stress_test.cpp  ipc_mmap_test.c  ipc_mmap_test.cpp  simple_collector.hpp  test.c  test_ipc_buffer.c  test_runner.c  test_runner.h  test_utils.h  vector_collector.hpp
(+46 files in other folders)
