# Root BUILD file for shmipc monorepo
# Aggregates all submodules for convenient builds

# Re-export core library and shared library for easy access
alias(
    name = "shmipc",
    actual = "//core:shmipc",
    visibility = ["//visibility:public"],
)

alias(
    name = "shmipc_shared",
    actual = "//core:shmipc_shared",
    visibility = ["//visibility:public"],
)

