alias(
    name = "shmipc",
    actual = "//core:shmipc",
    visibility = ["//visibility:public"],
)

alias(
    name = "shmipc_shared",
    actual = "//core:shmipc_shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "shmipc_java",
    actual = "//java:shmipc_java",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "build_all",
    srcs = [
        ":shmipc",
        ":shmipc_shared",
        ":shmipc_java",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test_all",
    tests = [
        "//core/tests:all",
        "//java:all_tests",
    ],
    visibility = ["//visibility:public"],
)
