load("//tools/copts:defs.bzl", "shmipc_copts", "shmipc_defines")
load("//java:tools/jni_headers.bzl", "jni_header_outs", "gen_jni_headers_cmd")
load("//java:tools/java_tests.bzl", "java_tests")

package(default_visibility = ["//visibility:private"])

exports_files(["tools/gen_jni_headers.sh"])

java_library(
    name = "shmipc_java_core",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:private"],
)

JNI_JAVA_SRCS = glob(["src/main/java/lib/shm/ipc/jni/**/*.java"])
JNI_HEADER_OUTS = jni_header_outs(JNI_JAVA_SRCS)

genrule(
    name = "jni_headers",
    srcs = JNI_JAVA_SRCS,
    outs = JNI_HEADER_OUTS,
    tools = [
        ":shmipc_java_core",
        "//java:tools/gen_jni_headers.sh",
    ],
    cmd = gen_jni_headers_cmd(":shmipc_java_core"),
    local = 1,
    tags = ["no-remote"],
    visibility = ["//java/native:__pkg__"],
)

filegroup(
    name = "jni_headers_files",
    srcs = [":jni_headers"],
    visibility = ["//java/native:__pkg__"],
)


java_library(
    name = "shmipc_java",
    srcs = glob(["src/main/java/**/*.java"]),
    runtime_deps = ["//java/native:shmipc_jni"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "junit4",
    visibility = ["//visibility:private"],
    exports = [
        "@maven_shmipc//:junit_junit",
    ],
)

java_tests(
    name = "all_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":shmipc_java",
        ":junit4",
    ],
    visibility = ["//visibility:private"],
)

