load("//java:tools/java_tests.bzl", "java_tests")

package(default_visibility = ["//visibility:private"])

java_library(
    name = "shmipc_java_core",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:private"],
)

java_library(
    name = "shmipc_java",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

java_library(
    name = "junit4",
    visibility = ["//visibility:private"],
    exports = [
        "@maven_shmipc//:junit_junit",
    ],
)

java_tests(
    name = "all_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    runtime_deps = ["//core:shmipc_shared"],
    jvm_flags = [
            "--enable-native-access=ALL-UNNAMED"
        ],
    deps = [
        ":shmipc_java",
        ":junit4",
    ],
    visibility = ["//visibility:private"],
)
