package(default_visibility = ["//visibility:private"])

TEST_COPTS = [
    "-std=c++20",
    "-O0",
    "-g",
    "-UNDEBUG",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-D_POSIX_C_SOURCE=200809L",
    "-D_XOPEN_SOURCE=700",
    "-fno-omit-frame-pointer",
]

TEST_LINKOPTS = ["-pthread"]

TEST_DEPS = [
    "//core:shmipc",
    "@doctest//doctest:doctest",
    ":test_support",
]

cc_library(
    name = "test_support",
    hdrs = glob(["*.h", "*.hpp"]),
    includes = ["."],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "ipc_buffer_basic_test",
    srcs = ["ipc_buffer_basic_test.cpp"],
    deps = TEST_DEPS,
    copts = TEST_COPTS,
    linkopts = TEST_LINKOPTS,
)

cc_test(
    name = "ipc_channel_basic_test",
    srcs = ["ipc_channel_basic_test.cpp"],
    deps = TEST_DEPS,
    copts = TEST_COPTS,
    linkopts = TEST_LINKOPTS,
)

cc_test(
    name = "ipc_mmap_test",
    srcs = ["ipc_mmap_test.cpp"],
    deps = TEST_DEPS,
    copts = TEST_COPTS,
    linkopts = TEST_LINKOPTS,
)

cc_test(
    name = "ipc_buffer_concurrency_test",
    srcs = ["ipc_buffer_concurrency_test.cpp"],
    deps = TEST_DEPS,
    copts = TEST_COPTS,
    linkopts = TEST_LINKOPTS,
)

cc_test(
    name = "ipc_channel_concurrency_test",
    srcs = ["ipc_channel_concurrency_test.cpp"],
    deps = TEST_DEPS,
    copts = TEST_COPTS,
    linkopts = TEST_LINKOPTS,
)

test_suite(
    name = "all",
    tests = [
        ":ipc_buffer_basic_test",
        ":ipc_buffer_concurrency_test",
        ":ipc_channel_basic_test",
        ":ipc_channel_concurrency_test",
        ":ipc_mmap_test",
    ],
    visibility = ["//visibility:public"],
)
